force-app/main/default/objects/Merge_Concern__c/Merge_Concern__c.object-meta.xml
<CustomObject>
    <description>Enumeration of fields that require special consideration when performing an automated merge operation in Apex.</description>
    <label>Merge Concern</label>
    <nameField>
        <label>Merge Concern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Concerns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>