force-app/main/default/objects/Merge_Concern__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The full name (including &quot;__c&quot; for custom fields) of the field under consideration.</description>
    <inlineHelpText>The full name (including &quot;__c&quot; for custom fields) of the field under consideration.</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>