force-app/main/default/objects/Merge_Concern__c/fields/Is_Force_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Is_Force_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to always overwrite or retain the value from the victim record. When unchecked, the behavior is to retain the value from the victim record only if the field on the survivor record is blank.</description>
    <inlineHelpText>Whether to always overwrite or retain the value from the victim record. When unchecked, the behavior is to retain the value from the victim record only if the field on the survivor record is blank.</inlineHelpText>
    <label>Is Force Overwrite</label>
    <type>Checkbox</type>
</CustomField>