force-app/main/default/objects/Merge_Concern__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The full API name  of the object on which the field exists.</description>
    <inlineHelpText>The full API name of the object on which the field exists.</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>